# automation-incident-logger

./: PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml
ailogger/: cli.py
data/: incidents.jsonl
demo/: README.md  list.txt  run_demo.sh  weekly-summary.md
src/: ailog.py
tests/: test_cli.py
