[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-incident-logger"
version = "0.3.0"
description = "Incident logging toolkit for AI and automation workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
ailogger = "ailogger.cli:main"
